added query articles by prefix

--- a/config.yml
+++ b/config.yml
@@ -33,3 +33,7 @@ genesis:
         quorum: "0.00001"
         threshold: "0.001"
         veto_threshold: "0.01"
+    cointrunk:
+      params:
+        anonArticleLimit: 5
+        anonArticleCost: "250000000000utestbze"
