emit event on publisher respect paid

--- a/config.yml
+++ b/config.yml
@@ -39,3 +39,6 @@ genesis:
         anonArticleCost:
           denom: "utestbze"
           amount: "25000000000"
+        publisher_respect_params:
+          denom: "utestbze"
+          tax: "0.200000000000"
